# receipt-lens

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
receipt_lens/: config.py  main.py  parser.py  schemas.py
tests/: test_api.py  test_parser.py
